2007-12-23  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Use urlparse module instead of
	nasty regexp.

2007-12-23  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Follow http redirects, avoiding
	up to 50 secs of 302 response codes. Also clean up the code by
	removing 'filter' usage.

2007-12-23  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Use subprocess, not popen.

2007-12-23  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Try to automatically determine
	the tarball location and moduleset. Now the script should only require
	a version to be specified.

2007-12-23  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Convert to optparse instead of
	getopt. Further, don't print the name of the first module file twice.

2007-12-23  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py:
	* smoketesting/tarball-conversion.config: Add way to put
	gtksourceview-1.0 in the modules files. Further, switch to urllib2.

2007-12-23  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* smoketesting/sample-tarball.jhbuildrc:
	* smoketesting/tarball-conversion.config:
	* versions: Update for GNOME 2.21.4.

2007-12-22  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Search for
	tarball-conversion.config in the same directory as the
	convert-to-tarballs script.

2007-12-18  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Support <waf>.

2007-12-05  Frederic Crozat  <fcrozat@mandriva.com>

	* smoketesting/sample-tarball.jhbuildrc:
	* smoketesting/tarball-conversion.config:
	* versions:
	Update for GNOME 2.21.3.

2007-11-28  Frederic Crozat  <fcrozat@mandriva.com>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* versions-stable:
	Update for GNOME 2.20.2.

2007-11-15  Elijah Newren  <newren gmail com>
