@@ -87,6 +87,9 @@
           location="http://download.gnome.org/sources/gtksourceview"
           />
   </locations>
+  <mirrors>
+    <mirror location="http://download.gnome.org/" alternate="sftp://master.gnome.org/ftp/pub/GNOME/" />
+  </mirrors>
   <rename>
     <name old="Render"               new="render"/>
     <name old="Xft"                  new="libXft"/>
